Updates Action Bar button to have a minimum width to resolve that wrapping situation

--- a/wp-content/themes/local1857/style.css
+++ b/wp-content/themes/local1857/style.css
@@ -36,6 +36,10 @@ Text Domain: local1857
   padding: 5rem;
 }
 
+.local1857-action-bar .wp-block-buttons{
+  min-width: 150px;
+}
+
 .local1857-menu-card {
   max-width: 300px;
   padding: 1.2rem;
